# camera-pose-estimator

./: .gitignore  .gitmodules  Dockerfile  README.md  README_.md  docker-compose.yml
app/: CMakeLists.txt  config.json  marker-config.json  marker-gen-config.json
app/src/: CMakeLists.txt  camera_calibrator.cpp  camera_calibrator.h  camera_pose_estimator.cpp  camera_pose_estimator.h  main.cpp
app/test/: creation.cpp
app/test/data/: camera.xml
app/tool/: marker_generator.cpp
